--- a/map/static/map.html
+++ b/map/static/map.html
@@ -14,4 +14,23 @@ var routers = new L.TileLayer('http://localhost:8001/{z}/{x}/{y}.png', {maxNativ
 layersControl = new L.Control.Layers({}, {"links": links, "routers": routers});
 map.addControl(layersControl);
 //var marker = L.marker([49.47502, 10.99253]).addTo(map);
+
+map.on('click', function(e) {
+	console.log(e.latlng);
+	console.log(map.getZoom());
+	// height = width of world in px
+	size_of_world_in_px = map.options.crs.scale(map.getZoom());
+	deg_lng_per_pix = 360 / size_of_world_in_px;
+	deg_lat_per_pix = 180 / size_of_world_in_px;
+	/*
+	db.routers.create_index([("location", "2dsphere")])
+	49,11
+	50,12
+	-> difference 1,1
+	-> in pix at zoom level 0 1.4,0.7
+	-> pythagoras -> distance in px
+	*/
+});
+
+
 </script>
