use default cursor insted of hand cursor on map

--- a/map/static/map.html
+++ b/map/static/map.html
@@ -12,6 +12,12 @@
 		html, body, #map {
 			height: 100%;
 		}
+		#map {
+			cursor: default;
+		}
+		.leaflet-dragging #map {
+			cursor: grabbing;
+		}
 	</style>
 </head>
 <body>
